project reboot has been started: header.scss has been cleaned (-242 lines of code); text blocks .tech_textBlock also cleaned and optimized for visual.css

--- a/styles/header.scss
+++ b/styles/header.scss
@@ -1,7 +1,7 @@
 @media screen and (min-width: 1024px) {
   header {
     max-height: 193px;
-    height: 10.04vw;
+    height: 10.05vw;
     .headerLogo {
       background-color: var(--color-white);
       display: flex;
@@ -20,9 +20,6 @@
       #burgerIcon {
         display: none;
       }
-      .headerTopButton {
-        display: none;
-      }
     }
     #menuContent {
       background-color: var(--color-white);
@@ -32,24 +29,12 @@
         height: 100%;
         display: flex;
         align-items: center;
-        #searchButton {
-          display: block;
-          max-width: 276px;
-          width: 19.4vw;
-          height: 20px;
-          button {
-            min-width: 17px;
-            #headerSearch {
-              width: 100%;
-              height: 100%;
-            }
-          }
-        }
+        justify-content: flex-end;
         .navigation {
           display: flex;
           justify-content: space-between;
           max-width: 888px;
-          width: 62.4vw;
+          width: 46.25vw;
           height: 20px;
           li {
             display: flex;
@@ -64,58 +49,13 @@
             }
           }
         }
-        .searchForm {
-          display: none;
-        }
-        .searchForm.active {
-          display: flex;
-          align-items: center;
-          justify-content: center;
-          width: 100%;
-          max-height: 60px;
-          height: 4.16vw;
-          padding: 0 4vw 0 4vw;
-          input {
-            max-width: 600px;
-            width: 31.25vw;
-            max-height: 40px;
-            height: 2.08vw;
-            &:hover {
-              border: 1px var(--color-black) solid;
-            }
-            &::placeholder {
-              color: var(--color-grey);
-              font-size: 1.08vw;
-            }
-          }
-          button {
-            background-color: var(--color-black);
-            color: var(--color-white);
-            max-width: 100px;
-            width: 9vw;
-            max-height: 40px;
-            height: 2.08vw;
-            font-weight: 600;
-            font-size: 1.08vw;
-            border-top-right-radius: 5px;
-            border-bottom-right-radius: 5px;
-            &:hover {
-              background-color: var(--color-grey);
-            }
-          }
-        }
         .profileAction {
           display: flex;
           justify-content: flex-end;
           max-width: 258px;
-          width: 18.1vw;
-          height: 20px;
-          ul {
-            display: flex;
-            justify-content: space-between;
-            width: 101px;
-            height: 18px;
-          }
+          width: 13.43vw;
+          max-height: 52px;
+          height: 2.7vw;
         }
       }
     }
@@ -123,64 +63,21 @@
 }
 @media screen and (max-width: 1023px) and (min-width: 768px) {
   header {
+    max-height: 130px;
     height: auto;
     .headerLogo {
       display: flex;
       align-items: center;
-      justify-content: space-between;
+      justify-content: flex-start;
       height: 70px;
       .logo {
+        margin: 0 auto;
+        transform: translateX(-15%);
         img {
           max-width: 101px;
           max-height: 35px;
           width: 100%;
         }
-      }
-      #burgerIcon span, #burgerIcon::before, #burgerIcon::after {
-        background-color: var(--color-black);
-        position: absolute;
-        height: 10%;
-        width: 100%;
-        left: 0;
-        transition: 0.3s ease 0s;
-      }
-      #burgerIcon {
-        display: block;
-        position: relative;
-        overflow: hidden;
-        z-index: 3;
-        width: 30px;
-        height: 20px;
-        span {
-          top: 50%;
-          transform: scale(1) translateY(-50%) translateX(0%);
-        }
-        &::before {
-          content: "";
-          top: 0;
-        }
-        &::after {
-          content: "";
-          bottom: 0;
-        }
-      }
-      #burgerIcon.active::before{
-        content: "";
-        top: 50%;
-        transform: rotate(-45deg) translateY(-50%);
-      }
-      #burgerIcon.active::after {
-        content: "";
-        bottom: 50%;
-        transform: rotate(45deg) translateY(50%);
-      }
-      #burgerIcon.active span {
-        top: 50%;
-        transform: scale(1) translateX(140px);
-      }
-      .headerTopButton {
-        background-color: inherit;
-        display: block;
       }
     }
     #menuContent.active {
@@ -200,13 +97,11 @@
         display: flex;
         align-items: center;
         height: 60px;
-        #searchButton {
-          display: none;
-        }
         .navigation {
           display: flex;
           justify-content: space-between;
-          width: 80%;
+          max-width: 888px;
+          width: 75%;
           height: 20px;
           li {
             display: flex;
@@ -216,54 +111,11 @@
             width: fit-content;
           }
         }
-        .searchForm {
-          display: none;
-        }
-        .searchForm.active {
-          display: flex;
-          align-items: center;
-          justify-content: center;
-          width: 100%;
-          height: 60px;
-          padding: 0 4vw 0 4vw;
-          input {
-            width: 60%;
-            height: 40px;
-            &:hover {
-              border: 1px var(--color-black) solid;
-            }
-            &::placeholder {
-              color: var(--color-grey);
-              font-size: 1rem;
-            }
-          }
-          button {
-            background-color: var(--color-black);
-            color: var(--color-white);
-            width: 20%;
-            height: 40px;
-            font-weight: 600;
-            font-size: 1rem;
-            border-top-right-radius: 5px;
-            border-bottom-right-radius: 5px;
-            &:hover {
-              background-color: var(--color-grey);
-            }
-          }
-        }
         .profileAction {
           display: flex;
           justify-content: flex-end;
           max-width: 258px;
-          width: 20%;
-          height: 20px;
-          ul {
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            width: 101px;
-            height: 18px;
-          }
+          width: 25%;
         }
       }
     }
@@ -278,57 +130,13 @@
       justify-content: space-between;
       height: 100%;
       .logo {
+        margin: 0 auto;
+        transform: translateX(-15%);
         img {
           max-width: 101px;
           max-height: 35px;
           width: 100%;
         }
-      }
-      #burgerIcon span, #burgerIcon::before, #burgerIcon::after {
-        background-color: var(--color-black);
-        position: absolute;
-        height: 10%;
-        width: 100%;
-        left: 0;
-        transition: 0.3s ease 0s;
-      }
-      #burgerIcon {
-        display: block;
-        position: relative;
-        overflow: hidden;
-        z-index: 3;
-        width: 30px;
-        height: 20px;
-        span {
-          top: 50%;
-          transform: scale(1) translateY(-50%) translateX(0%);
-        }
-        &::before {
-          content: "";
-          top: 0;
-        }
-        &::after {
-          content: "";
-          bottom: 0;
-        }
-      }
-      #burgerIcon.active::before{
-        content: "";
-        top: 50%;
-        transform: rotate(-45deg) translateY(-50%);
-      }
-      #burgerIcon.active::after {
-        content: "";
-        bottom: 50%;
-        transform: rotate(45deg) translateY(50%);
-      }
-      #burgerIcon.active span {
-        top: 50%;
-        transform: scale(1) translateX(140px);
-      }
-      .headerTopButton {
-        background-color: inherit;
-        display: block;
       }
     }
     #menuContent.active {
@@ -345,17 +153,16 @@
       transition: left 0.3s ease 0s;
       .burgerWrapper {
         display: flex;
+        justify-content: space-between;
+        flex-direction: column;
         position: relative;
         padding-top: 20px;
-        height: 300px;
-        #searchButton {
-          display: none;
-        }
+        height: 392px;
         .navigation {
           display: flex;
           flex-direction: column;
           justify-content: space-between;
-          width: 80%;
+          width: 100%;
           height: 300px;
           li {
             display: flex;
@@ -363,55 +170,6 @@
             font-weight: 600;
             font-size: 1rem;
             width: fit-content;
-          }
-        }
-        .searchForm {
-          display: none;
-        }
-        .searchForm.active {
-          display: flex;
-          align-items: center;
-          justify-content: center;
-          position: absolute;
-          bottom: -80px;
-          width: 100%;
-          height: 40px;
-          margin-top: 20px;
-          input {
-            width: 70%;
-            height: 100%;
-            &:hover {
-              border: 1px var(--color-black) solid;
-            }
-            &::placeholder {
-              color: var(--color-grey);
-              font-size: 1rem;
-            }
-          }
-          button {
-            background-color: var(--color-black);
-            color: var(--color-white);
-            width: 30%;
-            height: 100%;
-            font-weight: 600;
-            font-size: 1rem;
-            border-top-right-radius: 5px;
-            border-bottom-right-radius: 5px;
-            &:hover {
-              background-color: var(--color-grey);
-            }
-          }
-        }
-        .profileAction {
-          width: 20%;
-          height: 300px;
-          ul {
-            display: flex;
-            align-items: flex-end;
-            justify-content: space-between;
-            flex-direction: column;
-            width: 100%;
-            height: 40%;
           }
         }
       }
